# nexus-collection-dl

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-libloot.yml
nexus_collection_dl/: __init__.py  api.py  cli.py  collection.py  deploy.py  downloader.py  extractor.py  fomod.py  loadorder.py  loot_sort.py  manifest.py  service.py  state.py  steam.py  updater.py  version_check.py
nexus_collection_dl/web/: __init__.py  app.py  tasks.py
nexus_collection_dl/web/static/: app.css  app.js
nexus_collection_dl/web/templates/: base.html  index.html  mods.html
