[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-collection-dl"
version = "0.1.0"
description = "Download mod collections from Nexus Mods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "py7zr>=0.20.0",
    "rarfile>=4.0",
]

[project.scripts]
nexus-dl = "nexus_collection_dl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
